deploy/k8s/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: goa-iam-deployment
  labels:
    app.kubernetes.io/name: goa-iam
    app.kubernetes.io/environment: development
spec:
  replicas: 2
  strategy:
    type: RollingUpdate
    rollingUpdate:
      maxSurge: 1
      maxUnavailable: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: goa-iam
      app.kubernetes.io/environment: development
      app.kubernetes.io/component: goa-iam-backend
  template:
    metadata:
      labels:
        app.kubernetes.io/name: goa-iam
        app.kubernetes.io/environment: development
        app.kubernetes.io/component: goa-iam-backend
    spec:
      terminationGracePeriodSeconds: 30
      securityContext:
        fsGroup: 65534
        runAsUser: 65534
        runAsGroup: 65534
        runAsNonRoot: true
      containers:
      - name: goa-iam-backend
        image: iam-service:v1
        imagePullPolicy: IfNotPresent
        securityContext:
          readOnlyRootFilesystem: true
          allowPrivilegeEscalation: false
          capabilities:
            drop:
              - ALL
          runAsUser: 65534
          runAsGroup: 65534
          runAsNonRoot: true
        resources:
          limits:
            memory: "128Mi"
            cpu: "500m"
          requests:
            memory: "128Mi"
            cpu: "500m"
        ports:
        - containerPort: 8080
          name: iam-backend
          protocol: TCP
