deploy/k8s/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: goa-iam-service
  labels:
    app.kubernetes.io/name: goa-iam
    app.kubernetes.io/environment: development
spec:
  type: ClusterIP
  selector:
    app.kubernetes.io/name: goa-iam
    app.kubernetes.io/environment: development
    app.kubernetes.io/component: goa-iam-backend
  ports:
  - port: 8080
    protocol: TCP
    name: iam-service
    targetPort: iam-backend
